syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "PartService.proto";
option java_multiple_files = true;
package com.sep3yg9.assignment2.grpc.protobuf.trays;

message Tray {
  int32 id = 1;
  double max_weight = 2;
  bool finished = 3;
  string type = 4;
  repeated com.sep3yg9.assignment2.grpc.protobuf.parts.Part parts = 5;
}

message TrayList {
  repeated Tray trays = 1;
}

service TrayService {
  rpc CreateTray(Tray) returns (Tray);
  rpc GetAllTrays(google.protobuf.Empty) returns (TrayList);
  rpc PutOnTray(com.sep3yg9.assignment2.grpc.protobuf.parts.PartTray) returns (Tray);
  rpc TrayFinished(google.protobuf.Int32Value) returns (Tray);
}